<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_passwords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_passwords" />

    <item
        android:id="@+id/navigation_folders"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_folders" />

    <item
        android:id="@+id/navigation_trash"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_trash" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>